# NanoLLM_from_Scratch

./: .gitignore  .uvrc  GitHub同步说明.md  QUICKSTART_UV.md  README.md  WSL2_SETUP.md  Windows安装指南.md  download_dataset.py  generate_report.py  git_sync.md  pyproject.toml  requirements.txt  run_quick_test.py  安装说明.txt  完成情况说明.md  推送命令.txt  环境检查.md  运行指南.md
configs/: base_config.yaml
results/: experiment_comparison.csv  experiment_comparison.md  training_results.csv  training_results.md  实验报告.md
results/baseline/: config.json  training_results.csv  training_results.md
results/high_lr/: config.json  training_results.csv  training_results.md
results/large_model/: config.json  training_results.csv  training_results.md
results/low_lr/: config.json  training_results.csv  training_results.md
results/small_model/: config.json  training_results.csv  training_results.md
scripts/: run.bat  run.sh
src/: dataset.py  experiment.py  model.py  modules.py  train.py
