[project]
name = "nanollm-from-scratch"
version = "0.1.0"
description = "Transformer implementation from scratch for BJTU LLM class"
authors = [{name = "BJTU Student"}]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "tensorboard>=2.13.0",
    "sentencepiece>=0.1.99",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

